data/derived/sp14/progs/unify/prog3879.ml.out
Characters 95-97:
  then x/(10** numdig -1) mod 10 :: l
          ^^
Error: This expression has type int but an expression was expected of type
         float
